# server

./: CMakeLists.txt  Makefile  my_server.h
ID/: ID.c  ID.h  ID_TCP.c  ID_TCP.h
error/: Error.c  Error.h
log/: log.c  log.h
packet/: packet.c  packet.h
tcp/: client_tcp.c  server_slave_tcp.c  server_tcp.c
testing/: test1.txt
udp/: client.c  server.c  server_slave.c
